--- a/style.css
+++ b/style.css
@@ -47,6 +47,34 @@
 
 /*!sc*/
 
+
+
+.new-section{
+    margin-top: 100px;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+.image-container {
+    margin-bottom: 20px;
+    max-width: 300px; /* Optional: Set a maximum width for each image container */
+}
+
+/* Allow text to wrap within the same line */
+.image-container h{
+    font-family: Inter, sans-serif;
+    font-weight: 500;
+    font-size: 1.375rem;
+}
+.image-container p {
+    word-wrap: break-word;
+    font-family: Inter, sans-serif;
+    font-weight: 500;
+    font-size: 1.375rem;
+    color: #555; /* Medium grey color */
+}
+
+
 .scroller.open {
     visibility: hidden;
 }
@@ -64,6 +92,7 @@
 .scroller-inner {
     display: inline-block;
     animation: 40s slide infinite linear;
+    
 }
 
 .scroller-inner img {
@@ -82,10 +111,50 @@
     flex-wrap: wrap;
     padding: 0px 20px;
     overflow: hidden;
+    /*animation: slideImages 10s linear infinite; */
 }
 .scroll-in img {
     height: 70px;
+    
 }
+
+@keyframes slideImages {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%); /* Adjust based on the number of images */
+    }
+}
+
+
+.trusted-logos {
+    display: flex;
+    gap:35px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 0px 20px;
+    overflow: hidden;
+}
+
+.trusted-logos img {
+    width: 80px; /* Adjust the size of the company logos */
+    height: auto;
+    margin: 0 20px;
+    
+    animation: moveRightLeft 8s linear infinite; /* Add the animation */
+}
+
+@keyframes moveRightLeft {
+    0%, 100% {
+        transform: translateX(0);
+    }
+    50% {
+        transform: translateX(-100%); /* Move to the left */
+    }
+}
+
+
 @keyframes slide {
     from {
         transform: translateX(0);
